test/error/MethodNoReturnType.fu
public class Test
{
	public Tester() { //ERROR: Method with no return type
	}
}
